# py-tree-sitter

./: README.md  pyproject.toml
.github/workflows/: pypi.yml
