[build-system]
requires = ["setuptools>=43"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-language-version-15"
version = "0.25.0"
description = "Python bindings to the Tree-sitter parsing library. Temporary repo to get support for tree-sitter langange version 15"
keywords = ["incremental", "parsing", "tree-sitter"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
requires-python = ">=3.10"
readme = "README.md"

[project.urls]
Source = "https://github.com/watermarkhu/py-tree-sitter"
Discord = "https://discord.gg/w7nTvsVJhm"
Matrix = "https://matrix.to/#/#tree-sitter-chat:matrix.org"

[[project.authors]]
name = "Mark Hu"
email = "watermarkhu@gmail.com"


[dependency-groups]
dev = [
    "auditwheel>=6.4.1",
    "mypy>=1.16.1",
    "ruff>=0.12.3",
]
docs = [
    "sphinx~=8.1",
    "sphinx-book-theme"
]
tests = [
    "tree-sitter-html>=0.23.2",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-rust>=0.23.2",
]

[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4
extend-exclude = [
    ".github",
    "__pycache__",
    "setup.py",
    "tree_sitter/core",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.cibuildwheel]
build-frontend = "build"
test-extras = ["tests"]
test-command = "python -munittest discover -s {project}/tests"

[tool.mypy]
exclude = ["tree_sitter/core"]

[tool.rstcheck]
ignore_directives = [
    "autoclass",
    "autodata",
    "automethod",
    "autosummary"
]
